fix: unique stops per direction
